--- a/AgileBIM.Controls.csproj
+++ b/AgileBIM.Controls.csproj
@@ -44,20 +44,48 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColorPicker.xaml.cs">
-      <DependentUpon>ColorPicker.xaml</DependentUpon>
+    <Compile Include="AgileButton.xaml.cs">
+      <DependentUpon>AgileButton.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AgileTabControl.xaml.cs">
+      <DependentUpon>AgileTabControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AgileTabItem.xaml.cs">
+      <DependentUpon>AgileTabItem.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AgileToggleButton.xaml.cs">
+      <DependentUpon>AgileToggleButton.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AgileColorPicker.xaml.cs">
+      <DependentUpon>AgileColorPicker.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WatermarkTextBox.xaml.cs">
-      <DependentUpon>WatermarkTextBox.xaml</DependentUpon>
+    <Compile Include="AgileTextBox.xaml.cs">
+      <DependentUpon>AgileTextBox.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="ColorPicker.xaml">
+    <Page Include="AgileButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AgileTabControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AgileTabItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AgileToggleButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AgileColorPicker.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="WatermarkTextBox.xaml">
+    <Page Include="AgileTextBox.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
