--- a/AgileBIM.Controls.csproj
+++ b/AgileBIM.Controls.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>Build\</OutputPath>
+    <OutputPath>Build\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>Build\</OutputPath>
+    <OutputPath>Build\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -59,6 +59,7 @@
     <Compile Include="AgileColorPicker.xaml.cs">
       <DependentUpon>AgileColorPicker.xaml</DependentUpon>
     </Compile>
+    <Compile Include="fromCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AgileTextBox.xaml.cs">
       <DependentUpon>AgileTextBox.xaml</DependentUpon>
